# educational-key-logger

./: Cargo.toml
src/: input.rs  input_event_codes.rs  lib.rs  parser.rs
src/client/: keylogger.rs  main.rs
src/server/: main.rs  parser.rs
