[package]
name = "educational-key-logger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
postcard = { version = "1.1.1", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
